--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.9",
     "postcss": "^8.4.45",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.6.2"
   },
