feat: add image scalling and blue on load

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "sharp": "^0.33.5",
     "tsx": "^4.19.0",
     "uuid": "^10.0.0"
   },
