--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:seed": "tsx ./db/seed.ts"
+    "db:seed": "tsx ./db/seed.ts",
+    "db:reset": "tsx ./db/reset.ts"
   },
   "dependencies": {
     "@uploadthing/react": "^6.8.0",
@@ -23,7 +24,8 @@
     "sharp": "^0.33.5",
     "tsx": "^4.19.0",
     "uploadthing": "^6.13.3",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.11",
