chore: change req from post to get

--- a/.github/workflows/reset-server.yml
+++ b/.github/workflows/reset-server.yml
@@ -12,4 +12,4 @@ jobs:
     steps:
       - name: Call API
         run: |
-          curl -X POST https://foodies.zafeer.pk/api/reset
+          curl -X GET https://foodies.zafeer.pk/api/reset
